# VE482-SHELL

./: CMakeLists.txt  README.md  builtin.h  exec.h  glo_value.h  main.c  parse.h
